# SolARModuleFBOW

./: .gitignore  CMakeLists.txt  JenkinsFile  README.adoc  README.md  SolARModuleFBOW.pri  SolARModuleFBOW.pro  SolARModuleFBOWCuda.pro  bcom-SolARModuleFBOW.pc.in  doxyfile  findremakenrules.pri  packagedependencies-android.txt  packagedependencies-cmake.txt  packagedependencies.txt  xpcf_SolARModuleFBOW_registry.xml
SolARModuleFBOW/: SolARModuleFBOW.pro  bcom-SolARModuleFBOW.pc.in  packagedependencies.txt  xpcf_SolARModuleFBOW_registry.xml
SolARModuleFBOWCuda/: JenkinsFile  SolARModuleFBOWCuda.pro  bcom-SolARModuleFBOWCuda.pc.in  packagedependencies.txt  packageignoreinstall.txt  xpcf_SolARModuleFBOWCuda_registry.xml
interfaces/: SolARFBOWAPI.h  SolARFBOWHelper.h  SolARKeyframeRetrieverFBOW.h  SolARModuleFBOW_traits.h
src/: SolARFBOWHelper.cpp  SolARKeyframeRetrieverFBOW.cpp  SolARModuleFBOW.cpp
tests/: installData.bat  installData.sh
tests/ClosestKeyframeRetrieval/: CMakeLists.txt  SolARFBOWClosestKeyframeRetrieval_conf.xml  SolARTestModuleFBOWClosestKeyframeRetrieval.pro  conf_ClosestKeyframeRetrieval.xml  main.cpp  packagedependencies.txt
tests/SolARFeatureMatchingUsingFBOW/: SolARFeatureMatchingUsingFBOW.pro  conf_SolARFeatureMatchingUsingFBOW.xml  main.cpp
tests/SolARTest_ModuleFBOW_ClosestKeyframeRetrieval/: ReadMe.md  SolARTest_ModuleFBOW_ClosestKeyframeRetrieval.pro  SolARTest_ModuleFBOW_ClosestKeyframeRetrieval_conf.xml  SolARTest_ModuleFBOW_ClosestKeyframeRetrieval_conf_popsift.xml  main.cpp  (+1 more)
tools/: README.md  installData.bat  installData.sh
(+16 files in other folders)
